--- a/config/mnist.yml
+++ b/config/mnist.yml
@@ -10,9 +10,9 @@ model:
 
 train:
   lr : 0.0001
-  epochs: 10
+  epochs: 50
   batch_size: 32
-  loss: 'mean_predictor_loss'
+  loss: 'noise_predictor_loss'
   checkpoint_folder: '../checkpoints/'
 
 diffusion_params:
