added argument for trainable classes to config

--- a/config/mnist.yml
+++ b/config/mnist.yml
@@ -14,6 +14,7 @@ train:
   batch_size: 32
   loss: 'noise_predictor_loss'
   checkpoint_folder: '../checkpoints/'
+  allowed_classes: [4]
 
 diffusion_params:
   beta_1: 0.0001
