made single sampling file out of two. sample method set to be configured via config

--- a/config/mnist.yml
+++ b/config/mnist.yml
@@ -14,7 +14,11 @@ train:
   batch_size: 32
   loss: 'noise_predictor_loss'
   checkpoint_folder: '../checkpoints/'
+  checkpoint_path: '../checkpoints/model_epoch_50.pth'
   allowed_classes: [4]
+
+sample:
+  method: 'noise_predictor'
 
 diffusion_params:
   beta_1: 0.0001
